Configurable scaling for sim

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Moon Orbit Simulation</title>
+    <title>Celestial Simulation</title>
     <style>
         body { margin: 0; overflow: hidden; }
     </style>
